--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -3,7 +3,7 @@ import { ViewTransitions } from 'astro:transitions';
 
 import '../styles/global.css';
 
-const pageTitle = "My Astro Site";
+const pageTitle = "私のAstro学習ブログ";
 ---
 
 <html lang="en">
@@ -22,5 +22,11 @@ const pageTitle = "My Astro Site";
 		<a href="/blog/">Blog</a>
 		
 		<h1>{pageTitle}</h1>
+		<p>ここには、私がAstroを学んでいく旅の様子を投稿します。</p>
+		<ul>
+			<li><a href="/posts/post-1/">記事1</a></li>
+			<li><a href="/posts/post-2/">記事2</a></li>
+			<li><a href="/posts/post-3/">記事3</a></li>
+		</ul>
 	</body>
 </html>
