ユニット3まで

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,7 @@
 ---
 import { ViewTransitions } from 'astro:transitions';
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 
 import '../styles/global.css';
 
@@ -17,10 +19,8 @@ const pageTitle = "私のAstro学習ブログ";
 		<ViewTransitions fallback="none" />
 	</head>
 	<body>
-		<a href="/">Home</a>
-		<a href="/about/">About</a>
-		<a href="/blog/">Blog</a>
-		
+		<Header />
+
 		<h1>{pageTitle}</h1>
 		<p>ここには、私がAstroを学んでいく旅の様子を投稿します。</p>
 		<ul>
@@ -28,5 +28,11 @@ const pageTitle = "私のAstro学習ブログ";
 			<li><a href="/posts/post-2/">記事2</a></li>
 			<li><a href="/posts/post-3/">記事3</a></li>
 		</ul>
+
+		<Footer />
+
+		<script>
+			import "../scripts/menu.js";
+		</script>
 	</body>
 </html>
