--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,7 @@
 ---
 import { ViewTransitions } from 'astro:transitions';
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 
 import '../styles/global.css';
 
@@ -42,13 +44,11 @@ const textCase = "uppercase";
 				text-transform: var(--textCase);
 			}
 		</style>
-		
+
 		<ViewTransitions fallback="none" />
 	</head>
 	<body>
-		<a href="/">Home</a>
-		<a href="/about/">About</a>
-		<a href="/blog/">Blog</a>
+		<Header />
 
 		<h1>{pageTitle}</h1>
 		<h2>... and my new Astro site!</h2>
@@ -69,11 +69,17 @@ const textCase = "uppercase";
 		{happy && <p>I am happy to be learning Astro! Astroを学べて幸せです！</p>}
 
 		{finished && <p>I finished this tutorial! このチュートリアルを終えました！</p>}
-		
+
 		{goal === 3 ? <p>My goal is to finish in 3 days. 3日で終えるのが目標です。</p> : <p>My goal is not 3 days. 3日が目標ではありません。</p>}
-	  
+
 		<p>I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one I built myself!</p>
-	  
+
 		<p>This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going!</p>
+
+		<Footer />
+
+		<script>
+			import "../scripts/menu.js";
+		</script>
 	</body>
 </html>
