--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,9 +1,5 @@
 ---
-import { ViewTransitions } from 'astro:transitions';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-
-import '../styles/global.css';
+import BaseLayout from '../layouts/BaseLayout.astro';
 
 const pageTitle = "私について";
 
@@ -25,61 +21,38 @@ const fontWeight = "bold";
 const textCase = "uppercase";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
-		<style define:vars={{skillColor, fontWeight, textCase}}>
-			h1 {
-			  color: purple;
-			  font-size: 4rem;
-			}
-			.skill {
-				/* color: green; */
-				color: var(--skillColor);
-				font-weight: var(--fontWeight);
-				text-transform: var(--textCase);
-			}
-		</style>
+<BaseLayout pageTitle={pageTitle}>
+  <style define:vars={{skillColor, fontWeight, textCase}}>
+    .skill {
+      /* color: green; */
+      color: var(--skillColor);
+      font-weight: var(--fontWeight);
+      text-transform: var(--textCase);
+    }
+  </style>
 
-		<ViewTransitions fallback="none" />
-	</head>
-	<body>
-		<Header />
+  <h2>... and my new Astro site!</h2>
 
-		<h1>{pageTitle}</h1>
-		<h2>... and my new Astro site!</h2>
+  <p>以下は私に関するいくつかの事実です。</p>
+  <ul>
+    <li>私の名前は{identity.firstName}です。</li>
+    <li>{identity.country}に住んでおり、{identity.occupation}として働いています。</li>
+    {identity.hobbies.length >= 2 &&
+      <li>私の2つの趣味は{identity.hobbies[0]}と{identity.hobbies[1]}です。</li>
+    }
+  </ul>
+  <p>私のスキルは以下の通りです。</p>
+  <ul>
+    {skills.map((skill) => <li class="skill">{skill}</li>)}
+  </ul>
 
-		<p>以下は私に関するいくつかの事実です。</p>
-		<ul>
-			<li>私の名前は{identity.firstName}です。</li>
-			<li>{identity.country}に住んでおり、{identity.occupation}として働いています。</li>
-			{identity.hobbies.length >= 2 &&
-				<li>私の2つの趣味は{identity.hobbies[0]}と{identity.hobbies[1]}です。</li>
-			}
-		</ul>
-		<p>私のスキルは以下の通りです。</p>
-		<ul>
-			{skills.map((skill) => <li class="skill">{skill}</li>)}
-		</ul>
+  {happy && <p>I am happy to be learning Astro! Astroを学べて幸せです！</p>}
 
-		{happy && <p>I am happy to be learning Astro! Astroを学べて幸せです！</p>}
+  {finished && <p>I finished this tutorial! このチュートリアルを終えました！</p>}
 
-		{finished && <p>I finished this tutorial! このチュートリアルを終えました！</p>}
+  {goal === 3 ? <p>My goal is to finish in 3 days. 3日で終えるのが目標です。</p> : <p>My goal is not 3 days. 3日が目標ではありません。</p>}
 
-		{goal === 3 ? <p>My goal is to finish in 3 days. 3日で終えるのが目標です。</p> : <p>My goal is not 3 days. 3日が目標ではありません。</p>}
+  <p>I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one I built myself!</p>
 
-		<p>I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one I built myself!</p>
-
-		<p>This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going!</p>
-
-		<Footer />
-
-		<script>
-			import "../scripts/menu.js";
-		</script>
-	</body>
-</html>
+  <p>This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going!</p>
+</BaseLayout>
