--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,14 +1,15 @@
 ---
+import { getCollection } from "astro:content";
 import BaseLayout from '../layouts/BaseLayout.astro';
 import BlogPost from '../components/BlogPost.astro';
 
-const allPosts = await Astro.glob('../pages/posts/*.md');
+const allPosts = await getCollection("posts");
 const pageTitle = "私のAstro学習ブログ";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
   <p>ここには、私がAstroを学んでいく旅の様子を投稿します。</p>
   <ul>
-    {allPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
+    {allPosts.map((post) => <BlogPost url={'/posts/' + post.slug} title={post.data.title} />)}
   </ul>
 </BaseLayout>
