--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -1,9 +1,10 @@
 ---
+import { getCollection } from "astro:content";
 import BaseLayout from '../../layouts/BaseLayout.astro';
 import BlogPost from '../../components/BlogPost.astro';
 
 export async function getStaticPaths() {
-  const allPosts = await Astro.glob('../posts/*.md');
+  const allPosts = await getCollection("posts");
 
   // return [
   //   {params: {tag: "astro"}, props: {posts: allPosts}},
@@ -15,10 +16,11 @@ export async function getStaticPaths() {
   // ]
 
   // const uniqueTags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
-  const uniqueTags = Array.from(new Set(allPosts.map((post) => post.frontmatter.tags).flat()));
+  // const uniqueTags = Array.from(new Set(allPosts.map((post) => post.frontmatter.tags).flat()));
+  const uniqueTags = Array.from(new Set(allPosts.map((post) => post.data.tags).flat()));
 
   return uniqueTags.map((tag) => {
-    const filteredPosts = allPosts.filter((post) => post.frontmatter.tags.includes(tag));
+    const filteredPosts = allPosts.filter((post) => post.data.tags.includes(tag));
 
     return {
       params: { tag },
@@ -33,6 +35,6 @@ const { posts } = Astro.props;
 <BaseLayout pageTitle={tag}>
   <p>{tag}のタグが付いた記事</p>
   <ul>
-    {posts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title}/>)}
+    {posts.map((post) => <BlogPost url={'/posts/' + post.slug} title={post.frontmatter.title}/>)}
   </ul>
 </BaseLayout>
