--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -35,6 +35,6 @@ const { posts } = Astro.props;
 <BaseLayout pageTitle={tag}>
   <p>{tag}のタグが付いた記事</p>
   <ul>
-    {posts.map((post) => <BlogPost url={'/posts/' + post.slug} title={post.frontmatter.title}/>)}
+    {posts.map((post) => <BlogPost url={'/posts/' + post.slug} title={post.data.title}/>)}
   </ul>
 </BaseLayout>
